--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "express": "4.17.1",
     "express-jwt": "5.3.3",
     "graphql": "14.6.0",
+    "graphql-subscriptions": "^1.1.0",
     "jsonwebtoken": "8.5.1",
+    "mongoose": "^5.10.0",
     "notarealdb": "0.2.2"
   },
   "devDependencies": {
